versions/v3.7.0/doxygen/html/dir_b6423b3a8fc1c9278ff19cba182cfe6d.md
---
version: v3.7.0
source_url: https://docs.zephyrproject.org/3.7.0/doxygen/html/dir_b6423b3a8fc1c9278ff19cba182cfe6d.html
original_path: doxygen/html/dir_b6423b3a8fc1c9278ff19cba182cfe6d.html
---

| Logo | Zephyr API Documentation  3.7.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

sensor Directory Reference

| Files | |
| --- | --- |
| [  ](adc__cmp__npcx_8h_source.md) | [adc\_cmp\_npcx.h](adc__cmp__npcx_8h.md) |
| [  ](sensor_2bd8lb600fs_8h_source.md) | [bd8lb600fs.h](sensor_2bd8lb600fs_8h.md) |
| [  ](bmp581__user_8h_source.md) | [bmp581\_user.h](bmp581__user_8h.md) |
| [  ](ccs811_8h_source.md) | [ccs811.h](ccs811_8h.md) |
|  | Extended public API for CCS811 Indoor Air Quality Sensor. |
| [  ](ens160_8h_source.md) | [ens160.h](ens160_8h.md) |
| [  ](explorir__m_8h_source.md) | [explorir\_m.h](explorir__m_8h.md) |
| [  ](f75303_8h_source.md) | [f75303.h](f75303_8h.md) |
| [  ](fcx__mldx5_8h_source.md) | [fcx\_mldx5.h](fcx__mldx5_8h.md) |
| [  ](fdc2x1x_8h_source.md) | [fdc2x1x.h](fdc2x1x_8h.md) |
|  | Extended public API for the Texas Instruments FDC2X1X. |
| [  ](grow__r502a_8h_source.md) | [grow\_r502a.h](grow__r502a_8h.md) |
| [  ](drivers_2sensor_2it8xxx2__vcmp_8h_source.md) | [it8xxx2\_vcmp.h](drivers_2sensor_2it8xxx2__vcmp_8h.md) |
| [  ](lm95234_8h_source.md) | [lm95234.h](lm95234_8h.md) |
| [  ](max17055_8h_source.md) | [max17055.h](max17055_8h.md) |
| [  ](sensor_2max31790_8h_source.md) | [max31790.h](sensor_2max31790_8h.md) |
| [  ](max31865_8h_source.md) | [max31865.h](max31865_8h.md) |
| [  ](mcux__acmp_8h_source.md) | [mcux\_acmp.h](mcux__acmp_8h.md) |
|  | Extended public API for the NXP MCUX Analog Comparator (ACMP). |
| [  ](mcux__lpcmp_8h_source.md) | [mcux\_lpcmp.h](mcux__lpcmp_8h.md) |
|  | Data structure for the NXP MCUX low-power analog comparator (LPCMP). |
| [  ](mhz19b_8h_source.md) | [mhz19b.h](mhz19b_8h.md) |
|  | Extended public API for MH-Z19B CO2 Sensor. |
| [  ](npm1300__charger_8h_source.md) | [npm1300\_charger.h](npm1300__charger_8h.md) |
| [  ](qdec__mcux_8h_source.md) | [qdec\_mcux.h](qdec__mcux_8h.md) |
| [  ](sgp40_8h_source.md) | [sgp40.h](sgp40_8h.md) |
|  | Extended public API for Sensirion's SGP40 gas sensor. |
| [  ](sht4x_8h_source.md) | [sht4x.h](sht4x_8h.md) |
|  | Extended public API for Sensirion's SHT4X T/RH sensors. |
| [  ](tcs3400_8h_source.md) | [tcs3400.h](tcs3400_8h.md) |
| [  ](sensor_2tle9104_8h_source.md) | [tle9104.h](sensor_2tle9104_8h.md) |
| [  ](drivers_2sensor_2tmag5273_8h_source.md) | [tmag5273.h](drivers_2sensor_2tmag5273_8h.md) |
| [  ](tmp108_8h_source.md) | [tmp108.h](tmp108_8h.md) |
|  | Extended public API for TI's TMP108 temperature sensor. |
| [  ](tmp116_8h_source.md) | [tmp116.h](tmp116_8h.md) |
| [  ](tsl2540_8h_source.md) | [tsl2540.h](tsl2540_8h.md) |
|  | Extended public API for AMS's TSL2540 ambient light sensor. |
| [  ](tsl2591_8h_source.md) | [tsl2591.h](tsl2591_8h.md) |
|  | Extended public API for AMS's TSL2591 ambient light sensor. |
| [  ](veaa__x__3_8h_source.md) | [veaa\_x\_3.h](veaa__x__3_8h.md) |
| [  ](veml7700_8h_source.md) | [veml7700.h](veml7700_8h.md) |
| [  ](w1__sensor_8h_source.md) | [w1\_sensor.h](w1__sensor_8h.md) |
|  | Extended public API for 1-Wire Sensors. |

- [zephyr](dir_6cbb653dcd0745b39bd039f02ad5bff5.md)
- [drivers](dir_49c63ef737d38af1498bd111c90a6556.md)
- [sensor](dir_b6423b3a8fc1c9278ff19cba182cfe6d.md)
- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.7.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
